# ocr-engine-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  compile_flags212121.txt  download_mnist_data.sh
.cache/clangd/index/: digit_ocr.cpp.CD9DA439E936E561.idx  digit_ocr.h.7A1C536CFDDB2FA2.idx  feature_extractor.cpp.3D28D09D089DC664.idx  feature_extractor.h.043CB22C4F721AFF.idx  knn_classifier.cpp.327F796AC8CC7FC6.idx  knn_classifier.h.DE26FB34CE281C6A.idx  main.cpp.10D74D15D14D6931.idx  mnist_loader.cpp.F4E14AE83BAEEE77.idx  mnist_loader.h.416A65B90644154E.idx  preprocessor.cpp.D240F27AAD2BCEE8.idx  preprocessor.h.D9BFF78BB2DBB94A.idx  test.cpp.C9EE659989E86747.idx
archive/: gradient.cpp  gradient.h  gradient_opt.cpp  gradient_opt.h  neural_network.cpp  neural_network_opt.cpp  neural_network_opt.h
include/: bmp_reader.h  cli.h  digit_ocr.h  feature_extractor.h  image_matrix.h  knn_classifier.h  loss.h  mnist_loader.h  neural_network.h  neural_network_classifier.h  opt_layer.h  opt_mlp.h  opt_neuron.h  opt_ops.h  opt_value.h  preprocessor.h
include/app/: cli.h  digit_ocr.h
include/baselines/common/: training_sample.h
include/core/: image_matrix.h
include/data/: mnist_loader.h
include/experiments/: training_logger.h
include/io/: bmp_reader.h
include/preprocess/: preprocessor.h
results/: summary.csv
src/: bmp_reader.cpp  digit_ocr.cpp  feature_extractor.cpp  gradient.cpp  image_matrix.cpp  knn_classifier.cpp  loss.cpp  main.cpp  mnist_loader.cpp  neural_network.cpp  neural_network_classifier.cpp  opt_layer.cpp  opt_mlp.cpp  opt_neuron.cpp  preprocessor.cpp  test.cpp
src/app/: cli.cpp  digit_ocr.cpp  main.cpp  test_fast_nn.cpp
src/core/: image_matrix.cpp
src/data/: mnist_loader.cpp
src/experiments/: training_logger.cpp
src/io/: bmp_reader.cpp
src/preprocess/: preprocessor.cpp
test/: README  test_knn.cpp  test_suite.cpp  test_suite.h
(+24 files in other folders)
